<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamTitleStyle"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/team_a_score_tv"
                    style="@style/ScoreTextViewStyle"
                    android:text="@string/team_score" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneForTeamA"
                    android:text="@string/plus_one_point" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/plus_two_points" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/plus_three_points" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addSixForTeamA"
                    android:text="@string/plus_six_points" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamTitleStyle"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/team_b_score_tv"
                    style="@style/ScoreTextViewStyle"
                    android:text="@string/team_score" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneForTeamB"
                    android:text="@string/plus_one_point" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/plus_two_points" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/plus_three_points" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addSixForTeamB"
                    android:text="@string/plus_six_points" />


            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="resetScore"
                android:text="@string/reset" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
